--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,20 +8,31 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+    matrix:
+        python-version: ["2.7","3.7","3.8","3.10"]
     steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        - uses: actions/checkout@v3
+        - name: Set Up Python ${{ matrix.python-version }}
+        - uses: actions/setup-python@v4
         with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-      - name: Build and push
-        uses: docker/build-push-action@v3
-        with:
-          context: .
-          file: ./Dockerfile
-          push: true
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/clockbox:latest
+            python-version: ${{ matrix.python-version }}
+        - name: Check Python Version
+          run: python -c "import sys;print(sys.version)"
+
+    #   - name: Checkout
+    #     uses: actions/checkout@v3
+    #   - name: Login to Docker Hub
+    #     uses: docker/login-action@v2
+    #     with:
+    #       username: ${{ secrets.DOCKER_HUB_USERNAME }}
+    #       password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+    #   - name: Set up Docker Buildx
+    #     uses: docker/setup-buildx-action@v2
+    #   - name: Build and push
+    #     uses: docker/build-push-action@v3
+    #     with:
+    #       context: .
+    #       file: ./Dockerfile
+    #       push: true
+    #       tags: ${{ secrets.DOCKER_HUB_USERNAME }}/clockbox:latest
