--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,15 +8,13 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    strategy:
-        matrix:
-            python-version: ["2.7", "3.7", "3.8", "3.10"]
+
     steps:
         - uses: actions/checkout@v3
-        - name: Set Up Python ${{ matrix.python-version }}
+        - name: Set Up Python 3.x
         - uses: actions/setup-python@v4
         with:
-            python-version: ${{ matrix.python-version }}
+            python-version: '3.x'
         - name: Check Python Version
           run: python -c "import sys;print(sys.version)"
 
