--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -26,11 +26,19 @@ jobs:
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Lint with flake8
+    - name: Lint with flake8 on Weight
       run: |
         # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 Weight/ --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 Weight/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Lint with flake8 on Billing
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 Billing/ --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 Billing/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics    
+    - name: Test the Python
+      run: python -c "import sys;print(sys.version)"
     - name: Test with pytest
       run: python -c "import sys;print(sys.version)"
