--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -6,6 +6,8 @@ name: ci
 on:
   push:
     branches: [ "development" ]
+  pull_request:
+    branches: [ "development" ]
 
 permissions:
   contents: read
