--- a/Billing/docker-compose.yml
+++ b/Billing/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     build: . 
     volumes:
-      - .:/app
+      - ./src:/app
       - ./in:/in
     command: 'sh -c "sleep 15 ; python3 /app/Billing.py"'
     ports:
