--- a/Weight/docker-compose.yml
+++ b/Weight/docker-compose.yml
@@ -10,10 +10,10 @@ services:
     expose:
       - "3306"
     environment:
-      - MYSQL_ROOT_PASSWORD:123@admin
-      - MYSQL_USER: dbuser
-      - MYSQL_DATABASE:weight
-      - MYSQL_PASSWORD: userpass
+      - MYSQL_ROOT_PASSWORD=123@admin
+      - MYSQL_USER=dbuser
+      - MYSQL_DATABASE=weight
+      - MYSQL_PASSWORD=userpass
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "mysqldb"]
       timeout: 20s
