--- a/Weight/docker-compose.yml
+++ b/Weight/docker-compose.yml
@@ -1,37 +1,21 @@
----
-version: "3.9"
-
+version: '3.1'
 services:
-  mysqldb:
-    image: mysql:8
-    volumes: 
-      - db-data:/var/lib/mysql
-      - ./dump:/docker-entry-point-initdb.d/
-    expose:
-      - "3306"
-    environment:
-      - MYSQL_ROOT_PASSWORD=123@admin
-      - MYSQL_USER=dbuser
-      - MYSQL_DATABASE=weight
-      - MYSQL_PASSWORD=userpass
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "mysqldb"]
-      timeout: 20s
-      retries: 10
   app:
-    build: .
-    volumes: 
-      - $PWD/in:/in
-    expose:
-      - "9090"
+    build: . 
+    volumes:
+      - ./src:/app
+      - ./in:/in
+    command: 'sh -c "sleep 15 ; python3 /app/app.py"'
     ports:
-      - 3000:9090
+      - 9090:9090
     depends_on:
-      mysqldb:
-        condition: service_healthy
-volume:
-  db-data:  
-networks:
-  default:
-    name: weight_default
-    external: true
+      - mysql
+
+  mysql:
+    image: mysql
+    environment:
+      MYSQL_DATABASE: weight
+      MYSQL_ROOT_PASSWORD: password
+    volumes:
+      - ./dump:/docker-entrypoint-initdb.d
+      
