--- a/Weight/docker-compose.yml
+++ b/Weight/docker-compose.yml
@@ -12,7 +12,7 @@ services:
       - mysql
 
   mysql:
-    image: mysql
+    image: mysql:8.0
     environment:
       MYSQL_DATABASE: weight
       MYSQL_ROOT_PASSWORD: password
