--- a/Weight/docker-compose.yml
+++ b/Weight/docker-compose.yml
@@ -2,24 +2,9 @@
 version: "3.9"
 
 services:
-  mysqldb:
-    image: mysql:8
-    volumes: 
-      - db-data:/var/lib/mysql
-      - ./dump:/docker-entry-point-initdb.d/
-    expose:
-      - "3306"
-    restart: always
-    environment:
-      - MYSQL_ROOT_PASSWORD=123@admin
-    healthcheck:
-      test: ["CMD", "mysqladmin", "ping", "-h", "mysqldb"]
-      timeout: 20s
-      retries: 10
-
   app:
     build: .
-    volumes: 
+    volumes:
       - $PWD/in:/in
     expose:
       - "9090"
@@ -28,6 +13,22 @@ services:
     depends_on:
       mysqldb:
         condition: service_healthy
+
+  mysqldb:
+    image: mysql
+    #image: mysql:8
+    volumes:
+      - db-data:/var/lib/mysql
+      - ./dump:/docker-entry-point-initdb.d/
+    expose:
+      - "3306"
+    restart: always
+    environment:
+      - MYSQL_ROOT_PASSWORD=123@admin
+    healthcheck:
+      test: [ "CMD", "mysqladmin", "ping", "-h", "mysqldb" ]
+      timeout: 20s
+      retries: 10
 
 volumes:
   db-data:
