--- a/Billing/docker-compose.yml
+++ b/Billing/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - ./src:/app
       - ./in:/in
-      - ~/ourci/applogs:/app/tmp
+      - ~/ourci/applogs:/tmp
     command: 'sh -c "sleep 15 ; python3 /app/Billing.py"'
     ports:
       - 8000:5000
