--- a/Billing/docker-compose.yml
+++ b/Billing/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     volumes:
       - ./src:/app
       - ./in:/in
-      - ~/ourci/applogs:docker-entrypoint-initdb.d/tmp
+      - /tmp/cilogs:/tmp/cilogs
     command: 'sh -c "sleep 15 ; python3 /app/Billing.py"'
     ports:
       - 8000:5000
