--- a/Billing/Dockerfile
+++ b/Billing/Dockerfile
@@ -1,6 +1,6 @@
 FROM python:3.7-alpine
 RUN python -m pip install --upgrade pip
 
-COPY ./src /app
+COPY . /app
 WORKDIR /app
 RUN pip install -r requirements.txt
