--- a/Weight/docker-compose.yml
+++ b/Weight/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   app:
     build: .
     volumes:
-      - $PWD/in:/in
+      - $PWD/in:/app/in
       - /tmp/cilogs:/tmp/cilogs
     expose:
       - "9090"
@@ -34,4 +34,3 @@ networks:
   default:
     name: weight_default
     external: true
-
