--- a/Billing/docker-compose.yml
+++ b/Billing/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     build: . 
     volumes:
       - .:/app
-      - ./in:/in
+      - ./in_billing:/in
       - /tmp/cilogs:/tmp/cilogs
     command: 'sh -c "sleep 15 ; python3 /app/Billing.py"'
     ports:
